[tool.poetry]
name = "depth-estimation"
version = "0.1.0"
description = ""
authors = ["Darius Morawiec <nok@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
rich = "^13.9.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
